<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="dev.decagon.godday.dummyblogfragments.viewmodel.SharedViewModel" />
        <variable
            name="postFragment"
            type="dev.decagon.godday.dummyblogfragments.ui.PostsFragment" />
        <variable
            name="binding"
            type="dev.decagon.godday.dummyblogfragments.utils.BindingAdaptersKt" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A3000000"
        tools:context=".ui.PostsFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="0dp"
            android:id="@+id/text_field"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:endIconMode="custom"
            android:gravity="center"
            android:visibility="gone"
            android:focusable="false"
            app:endIconDrawable="@drawable/ic_baseline_search_24" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/search_hint"
                app:querySearch="@{viewModel}"
                android:id="@+id/searchText"
                android:textSize="24sp"
                android:inputType="text"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="0dp"
            android:id="@+id/filter_field"
            app:viewModel="@{viewModel}"
            app:adapter="@{postFragment.adapter}"
            app:layout_constraintTop_toBottomOf="@id/text_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:endIconMode="custom"
            android:gravity="center"
            android:visibility="gone"
            android:focusable="false"
            app:endIconDrawable="@drawable/ic_baseline_search_24" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/filter_hint"
                android:textSize="24sp"
                android:inputType="number"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:adapter="@{postFragment.adapter}"
            app:sharedViewModel="@{viewModel}"
            app:progressBar="@{loader}"
            app:fragment="@{postFragment}"
            tools:listitem="@layout/recyclerview_item"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_field" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loader"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:tint="@color/white"
            app:customOnClickListener="@{viewModel}"
            app:backgroundTint="@color/blue_700"
            android:contentDescription="@string/create_post"
            android:src="@drawable/ic_baseline_add_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>