<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    app:cardCornerRadius="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/profileImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:foreground="#6F1976D2"
                        android:contentDescription="@string/user_image"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/avatar" />

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/user_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_id"
                    android:textStyle="bold"
                    android:layout_marginTop="6dp"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Title"
                android:textColor="#FF6575"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="7dp"
                android:textSize="22sp" />


            <TextView
                android:id="@+id/post"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@drawable/side_nav_bar"
                android:fontFamily="@font/lobster_two"
                android:gravity="center"
                android:padding="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="Hello" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:orientation="horizontal"
                android:layout_marginBottom="7dp"
                android:weightSum="6">

                <ImageView
                    android:id="@+id/like"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_outline_thumb_up_alt_24" />

                <ImageView
                    android:id="@+id/favorite"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/ic_outline_favorite_border_24" />

                <TextView
                    android:id="@+id/comment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:layout_weight="4"
                    android:gravity="end|center"
                    android:textColor="#89000000"
                    android:layout_marginEnd="15dp"
                    android:text="@string/comments"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/title_bg"
            android:layout_gravity="bottom" />

    </com.google.android.material.card.MaterialCardView>
</layout>
